<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTTL"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtNama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />

    <TextView
        android:text="@string/jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtJenis_Kelamin"
        app:layout_constraintTop_toBottomOf="@+id/txtTTL"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAlamat"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtJenis_Kelamin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp" />
    <TextView
        android:text="@string/agama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAgama"
        app:layout_constraintTop_toBottomOf="@+id/txtAlamat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="24dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nama"
        android:id="@+id/editNama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNama"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTTL"
        android:hint="@string/ttl"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editNama"
        app:layout_constraintStart_toEndOf="@+id/txtTTL"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTTL"
        app:layout_constraintStart_toEndOf="@+id/txtJenis_Kelamin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:id="@+id/rbLaki_laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/laki_laki"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:text="@string/perempuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbPerempuan"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </RadioGroup>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:id="@+id/editAlamat"
        android:hint="@string/alamat"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editTTL"
        app:layout_constraintStart_toEndOf="@+id/txtAlamat"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/cbIslam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:text="@string/islam"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtAgama"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:text="@string/kristen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbKristen"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbIslam"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/txtAgama"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/khatolik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbKhatolik"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbKristen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAgama"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/hindu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbHindu"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbKhatolik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAgama"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/budha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbBudha"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbHindu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAgama"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/imgButtonCancel"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbBudha"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imgButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCancel"
        app:layout_constraintTop_toBottomOf="@+id/cbBudha"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="VectorDrawableCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>